# Mukon-messenger

./: .gitignore  AUDIT-2026-05-21.md  Anchor.toml  CLAUDE.md  README.md  package.json
.dev/: ARCIUM_INTEGRATION.md  CHANGELOG.md  LIGHT_PROTOCOL_INTEGRATION.md  MESSAGE_STORAGE_ARCHITECTURE.md  POSTGRES_MIGRATION.md  SESSION_FEB4_NIGHT.md  SESSION_FEB5.md  Untitled  fly.md
app/: App.tsx  app.json  build-apk.sh  index.js  metro.config.js  package-lock.json  package.json
app/android/: gradle.properties
app/android/app/: build.gradle  google-services.json
app/plugins/: withFirebase.js
app/src/: config.ts
app/src/components/: Avatar.tsx  AvatarDisplay.tsx  CallButton.tsx  CallUIOverlay.tsx  ContactProfileModal.tsx  CustomDrawer.tsx  (+4 more)
artifacts/: circuits_hash.txt  docker-compose-arx-env.yml  recovery_node_config_2.toml  recovery_node_config_3.toml  recovery_node_config_4.toml  recovery_node_config_5.toml  recovery_node_config_6.toml
artifacts/localnet/: node_0.json  node_1.json  node_3.json  node_5.json  node_bls_0.json  node_bls_1.json  node_bls_2.json  node_bls_3.json  node_bls_4.json  node_bls_5.json  node_bls_6.json  node_callback_0.json  node_callback_1.json  node_callback_2.json  node_callback_3.json  node_callback_4.json  node_callback_5.json  node_callback_6.json  node_x25519_0.json  node_x25519_1.json  node_x25519_4.json  node_x25519_6.json  recovery_node_2.json  recovery_node_4.json  recovery_node_6.json  recovery_node_x25519_2.json  recovery_node_x25519_3.json  recovery_node_x25519_5.json  td_master_seed.json
backend/: .dockerignore  DEPLOY.md  Dockerfile  RATE_LIMITING.md  fly.toml  package-lock.json  package.json
backend/src/: db.js  index.js  socketRateLimit.js
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/mukon-messenger/: Cargo.toml
programs/mukon-messenger/src/: lib.rs
scripts/: close-relationships.ts  init-comp-defs.ts  test-relationships.ts
(+26 files in other folders)
