[package]
name = "mukon-messenger"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mukon_messenger"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "light-sdk/idl-build", "arcium-anchor/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
sha2 = "0.10"
light-sdk = { version = "0.17", features = ["anchor", "v2"] }
light-hasher = "5.0.0"
arcium-anchor = "=0.8.0"
arcium-client = { version = "=0.8.0", default-features = false }
arcium-macros = "=0.8.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(getrandom_backend, values("custom"))'] }
